systemd: Fix cards wrapping incorrectly

--- a/pkg/systemd/overview.scss
+++ b/pkg/systemd/overview.scss
@@ -87,7 +87,7 @@
   }
 
   // Extra large desktop: Let cards align to the left at an optimal size
-  @media (min-width: 113rem) {
+  @media (min-width: 114rem) {
     --pf-v6-l-gallery--GridTemplateColumns: repeat(auto-fill, minmax(min-content, 26rem));
   }
 
